<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/background_design"
    tools:context=".screen.InputActivity">

    <TextView
        android:text="@string/add_item"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/itemName"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#9E9C9C"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <EditText
        android:id="@+id/modelNo"
        android:hint="@string/model_number_hint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#9E9C9C"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <EditText
        android:id="@+id/stock"
        android:hint="@string/stock_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="#9E9C9C"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <EditText
        android:id="@+id/price"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="#9E9C9C"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <Button
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        android:onClick="submit"
        android:background="@color/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="back"
        android:background="@color/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>