<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/background_design"
    tools:context=".screen.UpdateActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:padding="5dp"
        android:text="@string/selected_item_to_update"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/pName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/product_name"
        android:textColor="@color/primaryDark"
        android:textColorHint="#5E5D5D"
        android:textAlignment="center"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/n"
        android:padding="4dp"
        android:gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pId"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/primaryAccent"
            android:text="@string/product_id"
            android:textColor="@color/primaryDark"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pModelNo"
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white"
            android:hint="@string/model_number_hint"
            android:textColor="@color/primaryDark"
            android:textColorHint="#5E5D5D"
            android:textAlignment="center"
            android:textSize="20sp"
            android:autofillHints=""
            android:inputType="text" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/n2"
        android:padding="4dp"
        android:gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pStock"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white"
            android:hint="@string/stock_hint"
            android:textColor="@color/primaryDark"
            android:textColorHint="#5E5D5D"
            android:textAlignment="center"
            android:textSize="20sp"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/pPrice"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white"
            android:hint="@string/price_hint"
            android:textColor="@color/primaryDark"
            android:textColorHint="#5E5D5D"
            android:textAlignment="center"
            android:textSize="20sp"
            android:autofillHints=""
            android:inputType="numberDecimal" />
    </LinearLayout>
    <Button
        android:id="@+id/updBtn"
        android:onClick="update"
        android:text="@string/update"
        android:textColor="@color/white"
        android:background="@color/primaryDark"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="back"
        android:text="@string/back"
        android:textColor="@color/white"
        android:background="@color/primaryDark"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>